@@ -51,6 +51,7 @@ setup(name='Products.LinguaPlone',
         'plone.locking',
         'plone.memoize',
         'plone.theme',
+        'plone.app.caching',
         'plone.app.controlpanel >= 2.1b1',
         'plone.app.i18n >= 2.0.1',
         'plone.app.iterate',
